--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.graphql.cors.allowed-origin-patterns=http://localhost:8080,https://sergio.com.br,http://localhost:3000
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/new_database
 spring.datasource.username=root
