--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.graphql.cors.allowed-origin-patterns=http://localhost:8080,https://sergio.com.br,http://localhost:3000
 
+security.jwt.token.secret-key: 53cr37
+security.jwt.token.expire-length: 3600000
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/new_database
 spring.datasource.username=root
