Parte 2 de JWT e Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
-springdoc.paths-to-match=/api/**/v1/**
+springdoc.paths-to-match=/api/**/v1/**, /auth/**
 springdoc.swagger-ui.use-root-path=true
