--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.graphql.cors.allowed-origin-patterns=http://localhost:8080,https://sergio.com.br,http://localhost:3000
 
-security.jwt.token.secret-key: 53cr37
-security.jwt.token.expire-length: 3600000
+file.upload-dir:/Users/User/Downloads/Tests
+
+security.jwt.token.secret-key= 53cr37
+security.jwt.token.expire-length= 3600000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/new_database
@@ -11,5 +13,9 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=215MB
 springdoc.paths-to-match=/api/**/v1/**, /auth/**
 springdoc.swagger-ui.use-root-path=true
